--- a/tardig/development/_development.sass
+++ b/tardig/development/_development.sass
@@ -15,11 +15,11 @@
 
 .development-codeframe
   .container
-    border: 1px dashed red
+    outline: 1px dashed red
   .row,
   [class*='block-grid-']
-    border: 1px dashed green
+    outline: 1px dashed green
   [class*='col-'],
   [class*='block-grid-'] > .block-item,
   [class*='block-grid-'] > li
-    border: 1px dashed blue
+    outline: 1px dashed blue
