--- a/tardig/typography/_variables.sass
+++ b/tardig/typography/_variables.sass
@@ -1,3 +1,5 @@
+$base-font-size: 16
 $baseline-height: 1.5
 $baseline-height-rem: #{$baseline-height}rem
-$ratio: 1.125
+$scale: 1.125
+$input-padding: #{$baseline-height / 8}rem
