--- a/tardig/_variables.sass
+++ b/tardig/_variables.sass
@@ -1,4 +1,4 @@
 @import 'grid/variables'
 @import 'typography/variables'
-@import 'typography2/variables'
 @import 'development/variables'
+@import 'components/variables'
