--- a/tardig/grid/_variables.sass
+++ b/tardig/grid/_variables.sass
@@ -1,7 +1,10 @@
 $gutter: 15px
 $columns: 12
-$breakpoint-xxs: 320px
 $breakpoint-xs: 480px
+$container-xs: 464px
 $breakpoint-sm: 768px
+$container-sm: 750px
 $breakpoint-md: 992px
+$container-md: 970px
 $breakpoint-lg: 1200px
+$container-lg: 1170px
