--- a/tardig/typography/_typography.sass
+++ b/tardig/typography/_typography.sass
@@ -76,7 +76,7 @@ input,
 option,
 select,
 input[type="color"]
-  height: calc($baseline-height-rem + ($input-padding * 2))
+  height: calc(#{$baseline-height-rem} + (#{$input-padding} * 2rem))
 
 input[type="checkbox"],
 input[type="radio"]
